--- a/theme/fibra-de-vidrio/productos.html
+++ b/theme/fibra-de-vidrio/productos.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f3773e114ca5" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f3773e114ca5" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Fibra de vidrio: Diseño y fabricación</title>
-  <meta content="Producción, instalación y mantenimiento de piezas de fibra de vidrio para la construcción y decoración, residencial, hotelera y de servicios. Diseños a la medida. Ofrecemos los mejores precios del mercado. Garantía de calidad." name="description">
-  <meta content="Fibra de vidrio: Diseño y fabricación" property="og:title">
-  <meta content="Producción, instalación y mantenimiento de piezas de fibra de vidrio para la construcción y decoración, residencial, hotelera y de servicios. Diseños a la medida. Ofrecemos los mejores precios del mercado. Garantía de calidad." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/5bcf3e3800ba18508c86c48a/5beb289bfacdf42d99d1b20c_ogg-fibra.jpg" property="og:image">
-  <meta content="Fibra de vidrio: Diseño y fabricación" property="twitter:title">
-  <meta content="Producción, instalación y mantenimiento de piezas de fibra de vidrio para la construcción y decoración, residencial, hotelera y de servicios. Diseños a la medida. Ofrecemos los mejores precios del mercado. Garantía de calidad." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/5bcf3e3800ba18508c86c48a/5beb289bfacdf42d99d1b20c_ogg-fibra.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -39,21 +39,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -89,10 +85,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" aria-current="page" class="nav-link light w--current">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" aria-current="page" class="nav-link light hide w--current">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -101,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -135,7 +131,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-center espacio-fibra">
       <div class="div-center vertical espacio-abajo">
         <div class="div-box-small">
-          <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+          <div class="logo-fibra micro">{{ texts.668c7f5d }}</div><img src="{{ images.34cdd91c.url }}" width="120" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <h1 class="heading-2 center">{{ texts.37bce494 }}</h1>
           <p class="paragraph dark medium center">{{ texts.14ead907 }}<br></p>
           <p class="paragraph dark medium center">{{ texts.7231e7bb }}<br>{{ texts.617cac04 }}<br></p>
@@ -231,7 +227,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div>
     <div class="div-center espacio">
-      <div class="div-box-small">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+      <div class="div-box-small"><img src="{{ images.34cdd91c.url }}" width="120" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
         <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>
         <h1 class="heading-2 center">{{ texts.46d7d800 }}</h1>
         <p class="paragraph dark medium center">{{ texts.-6a311f37 }}</p>
@@ -262,7 +258,7 @@ function validateRecaptcha() {
 </script>
         </div>
         <div class="div-block-17 margint-top">
-          <a href="{{ links.768ad3ac }}" class="link-block-2 w-inline-block">{%- image images.-26549a73.url, images.-26549a73.alt, '[]', 'width="20" class="icono-telefono"' -%}
+          <a href="{{ links.768ad3ac }}" class="link-block-2 w-inline-block"><img src="{{ images.-26549a73.url }}" width="20" alt="{{ images.-26549a73.alt | escape }}" class="icono-telefono">
             <p class="paragraph dark big center">{{ texts.-70c0b1fd }}</p>
           </a>
         </div>
@@ -275,7 +271,7 @@ function validateRecaptcha() {
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -320,4 +316,4 @@ input#bucket {
 }
 </style>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
