--- a/theme/fibra-de-vidrio/diseno-medida.html
+++ b/theme/fibra-de-vidrio/diseno-medida.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f36be8114c96" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f36be8114c96" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Diseño a la medida en fibra de vidrio</title>
-  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" name="description">
-  <meta content="Diseño a la medida en fibra de vidrio" property="og:title">
-  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" property="og:description">
-  <meta content="Diseño a la medida en fibra de vidrio" property="twitter:title">
-  <meta content="Fabricamos cualquier tipo de forma, tamaño, color y características de piezas. Nos adaptamos a tus necesidades de fabricación en fibra de vidrio. ¡Somos fabricantes en fibra de vidrio!" property="twitter:description">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -37,21 +37,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -87,10 +83,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -99,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -138,13 +134,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="paragraph dark medium center">{{ texts.-70e87127 }}</p>
           <div class="div-block-17 margeninferior">
             <a href="{{ links.768ad3ac }}" class="link-block-2 w-inline-block">
-              <p class="paragraph dark big center">{{ texts.5401eebe }}</p>{%- image images.-26549a73.url, images.-26549a73.alt, '[]', 'width="20" class="icono-telefono"' -%}
+              <p class="paragraph dark big center">{{ texts.5401eebe }}</p><img src="{{ images.-26549a73.url }}" width="20" alt="{{ images.-26549a73.alt | escape }}" class="icono-telefono">
               <p class="paragraph dark big center">{{ texts.-70c0b1fd }}</p>
             </a>
-            <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+            <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block"><img src="{{ images.-42a9d590.url }}" width="30" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;30px&quot;}]" alt="{{ images.-42a9d590.alt | escape }}" class="icono-whatsapp">
               <p class="paragraph dark big center whatsapp">{{ texts.-59735f28 }}</p>
             </a>
-            <a href="{{ links.7c9fd389 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+            <a href="{{ links.7c9fd389 }}" class="link-block-2-copy whatsapp w-inline-block"><img src="{{ images.-42a9d590.url }}" width="30" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;30px&quot;}]" alt="{{ images.-42a9d590.alt | escape }}" class="icono-whatsapp">
               <p class="paragraph dark big center whatsapp">{{ texts.-70c0b1fd }}</p>
             </a>
           </div>
@@ -261,7 +257,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
       </div>
       <div class="div-center vertical vertical-center-contacto">
-        <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+        <div class="logo-fibra micro">{{ texts.668c7f5d }}</div><img src="{{ images.34cdd91c.url }}" width="120" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
         <a href="{{ links.-6164a4a }}" class="boton-naranja min-300-copy w-button">{{ texts.46d7d800 }}</a>
         <a href="{{ links.666183d6 }}" class="boton-naranja w-button">{{ texts.-1465f815 }}</a>
       </div>
@@ -270,7 +266,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -310,4 +306,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
