--- a/theme/fibra-de-vidrio/galeria.html
+++ b/theme/fibra-de-vidrio/galeria.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f30d58114c99" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f30d58114c99" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Galería división fibra de vidrio</title>
-  <meta content="Galería división fibra de vidrio" property="og:title">
-  <meta content="Galería división fibra de vidrio" property="twitter:title">
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -32,21 +32,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -82,10 +78,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -94,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -133,14 +129,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-galeria">
           <h2 class="h3-galeria-proyectos-titulo">{{ texts.-6d6691a5 }}</h2>
           <p class="paragraph dark medium center margen-ingerior">{{ texts.10267598 }}<br></p>
-          <a href="{{ links.23 }}" class="lightbox-link full-width fibra w-inline-block w-lightbox">{%- image images.-55c025a5.url, images.-55c025a5.alt, '[{"max":991,"size":"100vw"},{"max":10000,"size":"80vw"}]', 'class="image w-hidden-medium w-hidden-small w-hidden-tiny"' -%}{%- image images.41deb2ff.url, images.41deb2ff.alt, '[{"max":991,"size":"90vw"},{"max":10000,"size":"100vw"}]', 'class="image w-hidden-main"' -%}
+          <a href="{{ links.23 }}" class="lightbox-link full-width fibra w-inline-block w-lightbox"><img class="image w-hidden-medium w-hidden-small w-hidden-tiny" src="{{ images.-55c025a5.url }}" alt="{{ images.-55c025a5.alt | escape }}" data-sizes="[{&quot;max&quot;:991,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;80vw&quot;}]" sizes="(max-width: 991px) 100vw, 80vw"><img class="image w-hidden-main" src="{{ images.41deb2ff.url }}" alt="{{ images.41deb2ff.alt | escape }}" data-sizes="[{&quot;max&quot;:991,&quot;size&quot;:&quot;90vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;100vw&quot;}]" sizes="(max-width: 991px) 90vw, 100vw">
             <script type="application/json" class="w-json">{"items":[{"_id":"5beb20f8324a50262c590a07","origFileName":"mercadocorona-galeria1.JPG","fileName":"mercadocorona-galeria1.JPG","fileSize":32301,"height":675,"url":"/assets/images/mercadocorona-galeria1.JPG","width":900,"type":"image"},{"_id":"5beb21047d19042a1e12a698","origFileName":"mercadocorona-galeria2.JPG","fileName":"mercadocorona-galeria2.JPG","fileSize":38816,"height":675,"url":"/assets/images/mercadocorona-galeria2.JPG","width":900,"type":"image"},{"_id":"5beb21117d19041d1612a6a1","origFileName":"mercadocorona-galeria3.JPG","fileName":"mercadocorona-galeria3.JPG","fileSize":78521,"height":1200,"url":"/assets/images/mercadocorona-galeria3.JPG","width":900,"type":"image"},{"_id":"5beb21207ab2700960d177de","origFileName":"mercadocorona-galeria4.JPG","fileName":"mercadocorona-galeria4.JPG","fileSize":69473,"height":675,"url":"/assets/images/mercadocorona-galeria4.JPG","width":900,"type":"image"},{"_id":"5beb212a16c0629d96c91819","origFileName":"mercadocorona-galeria5.JPG","fileName":"mercadocorona-galeria5.JPG","fileSize":41175,"height":675,"url":"/assets/images/mercadocorona-galeria5.JPG","width":900,"type":"image"},{"_id":"5beb213916c0623b35c91823","origFileName":"mercadocorona-galeria6.JPG","fileName":"mercadocorona-galeria6.JPG","fileSize":38257,"height":675,"url":"/assets/images/mercadocorona-galeria6.JPG","width":900,"type":"image"},{"_id":"5beb21435af27b846e990673","origFileName":"mercadocorona-galeria7.JPG","fileName":"mercadocorona-galeria7.JPG","fileSize":72455,"height":675,"url":"/assets/images/mercadocorona-galeria7.JPG","width":900,"type":"image"},{"_id":"5beb215016c0620fb1c9182a","origFileName":"mercadocorona-galeria8.JPG","fileName":"mercadocorona-galeria8.JPG","fileSize":53623,"height":675,"url":"/assets/images/mercadocorona-galeria8.JPG","width":900,"type":"image"},{"_id":"5beb215b11a76e1d3049ad90","origFileName":"mercadocorona-galeria9.JPG","fileName":"mercadocorona-galeria9.JPG","fileSize":36179,"height":675,"url":"/assets/images/mercadocorona-galeria9.JPG","width":900,"type":"image"},{"_id":"5beb2168a7893d30ce430e0c","origFileName":"mercadocorona-galeria10.jpg","fileName":"mercadocorona-galeria10.jpg","fileSize":66647,"height":675,"url":"/assets/images/mercadocorona-galeria10.jpg","width":900,"type":"image"},{"_id":"5beb21755af27b8bbd990888","origFileName":"mercadocorona-galeria11.jpg","fileName":"mercadocorona-galeria11.jpg","fileSize":51133,"height":507,"url":"/assets/images/mercadocorona-galeria11.jpg","width":900,"type":"image"}],"group":"fibradevidrio"}</script>
           </a>
         </div>
         <div class="div-galeria">
           <h2 class="h3-galeria-proyectos-titulo">{{ texts.4c8e6933 }}</h2>
           <p class="paragraph dark medium center margen-ingerior">{{ texts.-51930747 }}<br></p>
-          <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox">{%- image images.229291b7.url, images.229291b7.alt, '[{"max":991,"size":"90vw"},{"max":10000,"size":"80vw"}]', 'class="image"' -%}
+          <a href="{{ links.23 }}" class="lightbox-link full-width w-inline-block w-lightbox"><img class="image" src="{{ images.229291b7.url }}" alt="{{ images.229291b7.alt | escape }}" data-sizes="[{&quot;max&quot;:991,&quot;size&quot;:&quot;90vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;80vw&quot;}]" sizes="(max-width: 991px) 90vw, 80vw">
             <script type="application/json" class="w-json">{"items":[{"_id":"5beb21ec324a50fe51590cb4","origFileName":"pergolado-fibradevidrio_04.jpeg","fileName":"pergolado-fibradevidrio_04.jpeg","fileSize":93459,"height":780,"url":"/assets/images/pergolado-fibradevidrio_04.jpeg","width":1040,"type":"image"},{"_id":"5beb21d211a76e1ac149addf","origFileName":"pergolado-fibradevidrio_03.jpeg","fileName":"pergolado-fibradevidrio_03.jpeg","fileSize":92081,"height":780,"url":"/assets/images/pergolado-fibradevidrio_03.jpeg","width":1040,"type":"image"},{"_id":"5beb1cde2914c40dab7b567f","origFileName":"pergolado-fibradevidrio_02.JPG","fileName":"pergolado-fibradevidrio_02.JPG","fileSize":136743,"height":900,"url":"/assets/images/pergolado-fibradevidrio_02.JPG","width":1200,"type":"image"},{"_id":"5beb1ceb5af27bfa779903a2","origFileName":"pergolado-fibradevidrio_01.JPG","fileName":"pergolado-fibradevidrio_01.JPG","fileSize":157134,"height":1200,"url":"/assets/images/pergolado-fibradevidrio_01.JPG","width":900,"type":"image"},{"_id":"5a99868a55afe2000196cd7e","origFileName":"1pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"1pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":67027,"height":768,"url":"/assets/images/1pergolado-guadalajara-galeria-fibradevidrio.jpg","width":1024,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a998681d2c2f3000106bbd0","origFileName":"2pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"2pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":48104,"height":768,"url":"/assets/images/galeria-fibradevidrio-2019-4.jpg","width":768,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a998676daad5c0001717c6e","origFileName":"3pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"3pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":44149,"height":768,"url":"/assets/images/3pergolado-guadalajara-galeria-fibradevidrio.jpg","width":768,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a99866aa301900001623653","origFileName":"4pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"4pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":57626,"height":768,"url":"/assets/images/4pergolado-guadalajara-galeria-fibradevidrio.jpg","width":768,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a99865da301900001623645","origFileName":"5pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"5pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":73917,"height":768,"url":"/assets/images/5pergolado-guadalajara-galeria-fibradevidrio.jpg","width":1024,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a998654daad5c0001717c57","origFileName":"6pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"6pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":26512,"height":768,"url":"/assets/images/6pergolado-guadalajara-galeria-fibradevidrio.jpg","width":576,"type":"image"},{"_id":"5a998649a30190000162363a","origFileName":"7pergolado-guadalajara-galeria-fibradevidrio.jpg","fileName":"7pergolado-guadalajara-galeria-fibradevidrio.jpg","fileSize":31458,"height":768,"url":"/assets/images/galeria-fibradevidrio-2019-8.jpg","width":576,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daec9b86e80001ba0b7e","origFileName":"17pergolas-fibra-de-vidrio.jpg","fileName":"17pergolas-fibra-de-vidrio.jpg","fileSize":83214,"height":900,"url":"/assets/images/17pergolas-fibra-de-vidrio.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daec1b6e5800017d947a","origFileName":"16pergolas-fibra-de-vidrio.jpg","fileName":"16pergolas-fibra-de-vidrio.jpg","fileSize":75630,"height":900,"url":"/assets/images/galeria-fibradevidrio-2019-9.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daebd2637e0001af6897","origFileName":"15pergolas-fibra-de-vidrio.jpg","fileName":"15pergolas-fibra-de-vidrio.jpg","fileSize":61112,"height":900,"url":"/assets/images/15pergolas-fibra-de-vidrio.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daead2637e0001af6896","origFileName":"14pergolas-fibra-de-vidrio.jpg","fileName":"14pergolas-fibra-de-vidrio.jpg","fileSize":29698,"height":900,"url":"/assets/images/14pergolas-fibra-de-vidrio.jpg","width":675,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daea1b6e5800017d9478","origFileName":"13pergolas-fibra-de-vidrio.jpg","fileName":"13pergolas-fibra-de-vidrio.jpg","fileSize":53764,"height":900,"url":"/assets/images/13pergolas-fibra-de-vidrio.jpg","width":675,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daeb39ab7c00014cbf4a","origFileName":"12pergolas-fibra-de-vidrio.jpg","fileName":"12pergolas-fibra-de-vidrio.jpg","fileSize":70526,"height":900,"url":"/assets/images/12pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daeb1b6e5800017d9479","origFileName":"11pergolas-fibra-de-vidrio.jpg","fileName":"11pergolas-fibra-de-vidrio.jpg","fileSize":147997,"height":900,"url":"/assets/images/11pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daeba8e63300018b2686","origFileName":"10pergolas-fibra-de-vidrio.jpg","fileName":"10pergolas-fibra-de-vidrio.jpg","fileSize":107516,"height":900,"url":"/assets/images/10pergolas-fibra-de-vidrio.jpg","width":1600,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67daead2637e0001af6895","origFileName":"9pergolas-fibra-de-vidrio.jpg","fileName":"9pergolas-fibra-de-vidrio.jpg","fileSize":88357,"height":900,"url":"/assets/images/9pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae81b6e5800017d9475","origFileName":"8pergolas-fibra-de-vidrio.jpg","fileName":"8pergolas-fibra-de-vidrio.jpg","fileSize":99493,"height":900,"url":"/assets/images/8pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae8d2637e0001af6894","origFileName":"7pergolas-fibra-de-vidrio.jpg","fileName":"7pergolas-fibra-de-vidrio.jpg","fileSize":84506,"height":900,"url":"/assets/images/7pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae839ab7c00014cbf49","origFileName":"6pergolas-fibra-de-vidrio.jpg","fileName":"6pergolas-fibra-de-vidrio.jpg","fileSize":69249,"height":900,"url":"/assets/images/galeria-fibradevidrio-2019-7.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae89b86e80001ba0b7c","origFileName":"5pergolas-fibra-de-vidrio.jpg","fileName":"5pergolas-fibra-de-vidrio.jpg","fileSize":47946,"height":900,"url":"/assets/images/5pergolas-fibra-de-vidrio.jpg","width":675,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae81b6e5800017d9476","origFileName":"4pergolas-fibra-de-vidrio.jpg","fileName":"4pergolas-fibra-de-vidrio.jpg","fileSize":157252,"height":900,"url":"/assets/images/4pergolas-fibra-de-vidrio.jpg","width":1200,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae89aae840001689dda","origFileName":"3pergolas-fibra-de-vidrio.jpg","fileName":"3pergolas-fibra-de-vidrio.jpg","fileSize":40789,"height":900,"url":"/assets/images/galeria-fibradevidrio-2019-6.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae89aae840001689ddb","origFileName":"2pergolas-fibra-de-vidrio.jpg","fileName":"2pergolas-fibra-de-vidrio.jpg","fileSize":83999,"height":900,"url":"/assets/images/galeria-fibradevidrio-2019-5.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"},{"_id":"5a67dae839ab7c00014cbf48","origFileName":"1pergolas-fibra-de-vidrio.jpg","fileName":"1pergolas-fibra-de-vidrio.jpg","fileSize":68349,"height":900,"url":"/assets/images/galeria-fibradevidrio-2019-3.jpg","width":900,"caption":"Proyecto realizado por Europisos","type":"image"}],"group":"fibradevidrio"}</script>
           </a>
         </div>
@@ -148,14 +144,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
   </div>
   <div class="div-center vertical vertical-center-contacto">
-    <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
+    <div class="logo-fibra micro">{{ texts.668c7f5d }}</div><img src="{{ images.34cdd91c.url }}" width="120" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
     <a href="{{ links.-6164a4a }}" class="boton-naranja min-300-copy w-button">{{ texts.46d7d800 }}</a>
     <a href="{{ links.666183d6 }}" class="boton-naranja min-300-gris w-button">{{ texts.-715751e4 }}</a>
   </div>
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -195,4 +191,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
