--- a/theme/mantenimiento.html
+++ b/theme/mantenimiento.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f31308114c9c" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f31308114c9c" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Mantenimiento de Pérgolas, Decks y Pisos de madera</title>
-  <meta content="Las mejores marcas para mantenimiento y con las mejores técnicas para proteger su inversión. Con atención dentro de Guadalajara, Zapopan y su zona metropolitana" name="description">
-  <meta content="Mantenimiento de Pérgolas, Decks y Pisos de madera" property="og:title">
-  <meta content="Las mejores marcas para mantenimiento y con las mejores técnicas para proteger su inversión. Con atención dentro de Guadalajara, Zapopan y su zona metropolitana" property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="og:image">
-  <meta content="Mantenimiento de Pérgolas, Decks y Pisos de madera" property="twitter:title">
-  <meta content="Las mejores marcas para mantenimiento y con las mejores técnicas para proteger su inversión. Con atención dentro de Guadalajara, Zapopan y su zona metropolitana" property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -39,21 +39,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!--  End Google Tag Manager  -->
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -89,10 +85,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -101,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -116,19 +112,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="heading-3 center">{{ texts.637742bb }}</h3>
       <p class="paragraph dark big center">{{ texts.-2cacca82 }}<br>{{ texts.7933fb7f }}</p>
       <a href="{{ links.-3f05918f }}" target="_blank" class="link-text big-underline">{{ texts.-5caaaf3e }}</a>
-      <div class="div-block top-bottom-space">{%- image images.348340a3.url, images.348340a3.alt, '[{"max":372,"size":"94vw"},{"max":10000,"size":"350px"}]', '' -%}
+      <div class="div-block top-bottom-space"><img src="{{ images.348340a3.url }}" data-sizes="[{&quot;max&quot;:372,&quot;size&quot;:&quot;94vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;350px&quot;}]" alt="{{ images.348340a3.alt | escape }}">
         <h3 class="heading-3">{{ texts.569775fb }}</h3>
-        <p class="paragraph dark medium center">{{ texts.-d77a9a3 }}<a href="{{ links.-14926fb7 }}" target="_blank">{{ texts.25a2090d }}</a>{{ texts.76c9da9b }}</p>{%- image images.334acc7.url, images.334acc7.alt, '[{"max":479,"size":"100vw"},{"max":646,"size":"97vw"},{"max":10000,"size":"627px"}]', '' -%}
+        <p class="paragraph dark medium center">{{ texts.-d77a9a3 }}<a href="{{ links.-14926fb7 }}" target="_blank">{{ texts.25a2090d }}</a>{{ texts.76c9da9b }}</p><img src="{{ images.334acc7.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:646,&quot;size&quot;:&quot;97vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;627px&quot;}]" alt="{{ images.334acc7.alt | escape }}">
       </div>
-      <div class="div-block top-bottom-space">{%- image images.-4ddde07.url, images.-4ddde07.alt, '[{"max":479,"size":"100vw"},{"max":10000,"size":"300px"}]', 'width="300"' -%}
+      <div class="div-block top-bottom-space"><img src="{{ images.-4ddde07.url }}" width="300" alt="{{ images.-4ddde07.alt | escape }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;300px&quot;}]">
         <h3 class="heading-3">{{ texts.569775fb }}</h3>
         <p class="paragraph dark medium center">
-          <a href="{{ links.1cf32839 }}" target="_blank">{{ texts.1faee0 }}</a>{{ texts.-733bcf02 }}</p>{%- image images.-5ec91746.url, images.-5ec91746.alt, '[{"max":479,"size":"100vw"},{"max":767,"size":"97vw"},{"max":916,"size":"98vw"},{"max":10000,"size":"898px"}]', '' -%}
+          <a href="{{ links.1cf32839 }}" target="_blank">{{ texts.1faee0 }}</a>{{ texts.-733bcf02 }}</p><img src="{{ images.-5ec91746.url }}" alt="{{ images.-5ec91746.alt | escape }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;97vw&quot;},{&quot;max&quot;:916,&quot;size&quot;:&quot;98vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;898px&quot;}]" sizes="(max-width: 479px) 100vw, (max-width: 767px) 97vw, (max-width: 916px) 98vw, 898px">
         <p class="paragraph dark medium center">{{ texts.7a7934e2 }}</p>
       </div>
       <div class="div-block top-bottom-space">
         <div class="div-block">
-          <h2 class="heading-2 center">{{ texts.593a3444 }}</h2>{%- image images.6f7e55a5.url, images.6f7e55a5.alt, '[{"max":479,"size":"100vw"},{"max":657,"size":"97vw"},{"max":10000,"size":"638px"}]', '' -%}
+          <h2 class="heading-2 center">{{ texts.593a3444 }}</h2><img src="{{ images.6f7e55a5.url }}" alt="{{ images.6f7e55a5.alt | escape }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:657,&quot;size&quot;:&quot;97vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;638px&quot;}]">
           <h3 class="heading-3">{{ texts.56d25100 }}</h3>
           <p class="paragraph dark medium center">{{ texts.-ebf2f9b }}</p>
         </div>
@@ -137,16 +133,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="paragraph dark medium center">{{ texts.-3c598279 }}</p>
           <p class="paragraph dark medium center">{{ texts.1ffffb2a }}</p>
           <p class="paragraph dark medium center">{{ texts.29e84868 }}</p>
-          <p class="paragraph dark medium center">{{ texts.-792be2fb }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.-792be2fb }}</p><img src="{{ images.7e1226dc.url }}" data-sizes="[{&quot;max&quot;:155,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;155px&quot;}]" alt="{{ images.7e1226dc.alt | escape }}">
         </div>
         <div class="div-block">
           <h3 class="heading-3">{{ texts.-334a6ac8 }}</h3>
           <p class="paragraph dark medium center">{{ texts.5dd24765 }}</p>
-          <p class="paragraph dark medium center">{{ texts.50b85b74 }}</p>{%- image images.7e1226dc.url, images.7e1226dc.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
-          <p class="paragraph dark medium center">{{ texts.514a688 }}</p>{%- image images.7e203e5d.url, images.7e203e5d.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.50b85b74 }}</p><img src="{{ images.7e1226dc.url }}" data-sizes="[{&quot;max&quot;:155,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;155px&quot;}]" alt="{{ images.7e1226dc.alt | escape }}">
+          <p class="paragraph dark medium center">{{ texts.514a688 }}</p><img src="{{ images.7e203e5d.url }}" data-sizes="[{&quot;max&quot;:155,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;155px&quot;}]" alt="{{ images.7e203e5d.alt | escape }}">
           <h3 class="heading-4">{{ texts.-4f6386de }}</h3>
-          <p class="paragraph dark medium center">{{ texts.-7fc272e9 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
-          <p class="paragraph dark medium center">{{ texts.-1a9618d4 }}</p>{%- image images.7e2e55de.url, images.7e2e55de.alt, '[{"max":155,"size":"100vw"},{"max":10000,"size":"155px"}]', '' -%}
+          <p class="paragraph dark medium center">{{ texts.-7fc272e9 }}</p><img src="{{ images.7e2e55de.url }}" data-sizes="[{&quot;max&quot;:155,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;155px&quot;}]" alt="{{ images.7e2e55de.alt | escape }}">
+          <p class="paragraph dark medium center">{{ texts.-1a9618d4 }}</p><img src="{{ images.7e2e55de.url }}" data-sizes="[{&quot;max&quot;:155,&quot;size&quot;:&quot;100vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;155px&quot;}]" alt="{{ images.7e2e55de.alt | escape }}">
         </div>
       </div>
     </div>
@@ -154,7 +150,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -194,4 +190,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
