--- a/theme/mobiliario-y-carpinteria.html
+++ b/theme/mobiliario-y-carpinteria.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f3889a114c9f" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f3889a114c9f" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Carpintería Residencial y Carpintería Comercial en Guadalajara</title>
-  <meta content="Desarrollamos de principio a fin proyectos de carpintería residencia y comercial. Te orientamos en cuestión de diseño y elección de maderas." name="description">
-  <meta content="Carpintería Residencial y Carpintería Comercial en Guadalajara" property="og:title">
-  <meta content="Desarrollamos de principio a fin proyectos de carpintería residencia y comercial. Te orientamos en cuestión de diseño y elección de maderas." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="og:image">
-  <meta content="Carpintería Residencial y Carpintería Comercial en Guadalajara" property="twitter:title">
-  <meta content="Desarrollamos de principio a fin proyectos de carpintería residencia y comercial. Te orientamos en cuestión de diseño y elección de maderas." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -40,21 +40,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="mobiliario, carpinteria, carpinteria residencial, carpinteria comercial">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -90,10 +86,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" aria-current="page" class="nav-link light w--current">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" aria-current="page" class="nav-link light hide w--current">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -102,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -142,15 +138,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <p class="paragraph dark medium center">{{ texts.-3c01d7d4 }}</p>
       <a href="{{ links.23 }}" class="boton-naranja w-button">{{ texts.2e35f721 }}</a>
       <div class="div-galeria-2-column">
-        <div class="div-block-14">{%- image images.3ec2e156.url, images.3ec2e156.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.-5b623717.url, images.-5b623717.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.-158fc48d.url, images.-158fc48d.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.7e0796cd.url, images.7e0796cd.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}{%- image images.7e15ae4e.url, images.7e15ae4e.alt, '[{"max":479,"size":"44vw"},{"max":767,"size":"46vw"},{"max":10000,"size":"47vw"}]', 'class="img-columnas"' -%}</div>
-        <div class="div-block-14">{%- image images.-7f070cb2.url, images.-7f070cb2.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.23c14c34.url, images.23c14c34.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7df97f4c.url, images.7df97f4c.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}{%- image images.7e23c5cf.url, images.7e23c5cf.alt, '[{"max":479,"size":"44vw"},{"max":991,"size":"46vw"},{"max":10000,"size":"435px"}]', 'width="435" class="img-columnas"' -%}</div>
+        <div class="div-block-14"><img src="{{ images.3ec2e156.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;47vw&quot;}]" alt="{{ images.3ec2e156.alt | escape }}" class="img-columnas"><img src="{{ images.-5b623717.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;47vw&quot;}]" alt="{{ images.-5b623717.alt | escape }}" class="img-columnas"><img src="{{ images.-158fc48d.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;47vw&quot;}]" alt="{{ images.-158fc48d.alt | escape }}" class="img-columnas"><img src="{{ images.7e0796cd.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;47vw&quot;}]" alt="{{ images.7e0796cd.alt | escape }}" class="img-columnas"><img src="{{ images.7e15ae4e.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;47vw&quot;}]" alt="{{ images.7e15ae4e.alt | escape }}" class="img-columnas"></div>
+        <div class="div-block-14"><img src="{{ images.-7f070cb2.url }}" width="435" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;435px&quot;}]" alt="{{ images.-7f070cb2.alt | escape }}" class="img-columnas"><img src="{{ images.23c14c34.url }}" width="435" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;435px&quot;}]" alt="{{ images.23c14c34.alt | escape }}" class="img-columnas"><img src="{{ images.7df97f4c.url }}" width="435" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;435px&quot;}]" alt="{{ images.7df97f4c.alt | escape }}" class="img-columnas"><img src="{{ images.7e23c5cf.url }}" width="435" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;44vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;435px&quot;}]" alt="{{ images.7e23c5cf.alt | escape }}" class="img-columnas"></div>
       </div>
     </div>
   </div>
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -190,4 +186,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
