--- a/theme/portafolio.html
+++ b/theme/portafolio.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f3384f114ca4" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f3384f114ca4" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Portafolio de proyectos</title>
-  <meta content="Portafolio de proyectos de Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." name="description">
-  <meta content="Portafolio de proyectos" property="og:title">
-  <meta content="Portafolio de proyectos de Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="og:image">
-  <meta content="Portafolio de proyectos" property="twitter:title">
-  <meta content="Portafolio de proyectos de Pérgolas, Decks, Pisos de madera, Saunas, Carpintería en Guadalajara, Zapopan, México." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -40,22 +40,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="portafolio de proyectos">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div>
     <div class="menu">
-      <div class="w-embed w-iframe">
-        <!--  Google Tag Manager (noscript)  -->
+      <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!--  End Google Tag Manager (noscript)  -->
       </div>
       <div class="container-xlarge">
         <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
           <div class="div-block-12">
-            <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+            <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
               <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
             </a>
             <nav role="navigation" class="nav-menu w-nav-menu">
@@ -91,10 +87,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </nav>
                 </div>
                 <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-                <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-                <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-                <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-                <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+                <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+                <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+                <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+                <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
               </div>
               <div class="nav-menu-right">
                 <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -103,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </nav>
             <div class="menu-button w-nav-button">
               <div class="con-menu-servicios">
-                <div>{{ texts.-657ae5c3 }}</div>
+                <div>{{ texts.240d5f }}</div>
                 <div class="icon-4 w-icon-nav-menu"></div>
               </div>
             </div>
@@ -125,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.101b7157.url, images.101b7157.alt, '[{"max":414,"size":"89vw"},{"max":767,"size":"369px"},{"max":991,"size":"43vw"},{"max":10000,"size":"369px"}]', '' -%}</div>
+          <div class="div-block-proyecto"><img src="{{ images.101b7157.url }}" data-sizes="[{&quot;max&quot;:414,&quot;size&quot;:&quot;89vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;369px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;43vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;369px&quot;}]" alt="{{ images.101b7157.alt | escape }}"></div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -139,7 +135,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
         <div class="div-50">
-          <div class="div-block-proyecto">{%- image images.440424d0.url, images.440424d0.alt, '[{"max":304,"size":"85vw"},{"max":10000,"size":"259px"}]', '' -%}</div>
+          <div class="div-block-proyecto"><img src="{{ images.440424d0.url }}" data-sizes="[{&quot;max&quot;:304,&quot;size&quot;:&quot;85vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;259px&quot;}]" alt="{{ images.440424d0.alt | escape }}"></div>
         </div>
       </div>
       <div class="div-horizontal">
@@ -147,14 +143,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-78e33b5a }}</h2>
             <p class="paragraph dark medium">{{ texts.-3a8c64c7 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-6f61b41d.url, images.-6f61b41d.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.-6f539c9c.url, images.-6f539c9c.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth"><img src="{{ images.-6f61b41d.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.-6f61b41d.alt | escape }}" class="img-columnas"><img src="{{ images.-6f539c9c.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.-6f539c9c.alt | escape }}" class="img-columnas"></div>
           </div>
         </div>
         <div class="div-50">
           <div class="div-block-proyecto">
             <h2 class="heading-2">{{ texts.-3e3c9f6b }}</h2>
             <p class="paragraph dark medium">{{ texts.-6036b884 }}</p>
-            <div class="div-block-14 fullwidth">{%- image images.-7c8c5a3b.url, images.-7c8c5a3b.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.61af75e0.url, images.61af75e0.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.278f32a7.url, images.278f32a7.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}{%- image images.48ee67ce.url, images.48ee67ce.alt, '[{"max":479,"size":"92vw"},{"max":767,"size":"88vw"},{"max":10000,"size":"45vw"}]', 'class="img-columnas"' -%}</div>
+            <div class="div-block-14 fullwidth"><img src="{{ images.-7c8c5a3b.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.-7c8c5a3b.alt | escape }}" class="img-columnas"><img src="{{ images.61af75e0.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.61af75e0.alt | escape }}" class="img-columnas"><img src="{{ images.278f32a7.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.278f32a7.alt | escape }}" class="img-columnas"><img src="{{ images.48ee67ce.url }}" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;92vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;88vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;45vw&quot;}]" alt="{{ images.48ee67ce.alt | escape }}" class="img-columnas"></div>
           </div>
         </div>
       </div>
@@ -164,7 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -204,4 +200,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
